# todoapi-k8s

./: .dockerignore  Dockerfile  LICENSE  README.md  deployment.yml  pyproject.toml  requirements.txt
tests/: conftest.py
tests/integration/: test_todoapp.py
tests/utils/: timer.py
todoapp/: db.py  main.py  models.py  schemas.py
