[tool.poetry]
name = "todoapi-k8s"
version = "0.1.0"
description = "A study on Kubernetes."
authors = ["Gabriel Mangiro <gabrielmangi01@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
FastAPI-SQLAlchemy = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
colorama = "^0.4.4"
ipdb = "^0.13.9"
ipython = "^7.30.1"
requests = "^2.27.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-v", "-s"]

[tool.ipdb]
context = 30

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
